--- a/home.html
+++ b/home.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 <title>My Homepage</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138656439-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138656439-1');
+</script>
+
 </head>
 <body>
   my homepage123
